# Karsoogh-Backend

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-entrypoint.sh  pdm.toml  pyproject.toml
accounts/: admin.py  authentication.py  models.py  serializers.py  urls.py  utils.py  views.py
core/: settings.py  urls.py
exams/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
